# toledosoftware-projects

./: .gitignore  LICENSE  README.md
CSharpInventoryAPI/: .dockerignore  .gitignore  CSharpInventoryAPI.sln  Dockerfile  Product.cs  Program.cs  readme.md
Gerenciador de Tarefas/: .gitignore  app.py  readme.md  tasks.json
auto-gaming-maintenance/: README.md  index.html  main.js  package-lock.json  package.json  style.css  vite.config.js
auto-gaming-maintenance/src-tauri/: Cargo.toml  tauri.conf.json
auto-gaming-maintenance/src-tauri/src/: main.rs
cpp-sudoku-solver/: readme.md  sudoku_solver.cpp
java-banking-system/: .gitignore  Account.java  BankingApp.java  readme.md
js-image-classifier/: index.html  readme.md  script.js
monitor de downloads/: monitor_download_gui.py  monitor_download_gui.spec  readme.md  requirements.txt
otimizador_ram/: .gitignore  background_monitor.py  config_processos.yaml  otimizador_ram_gui.py  readme.md
resumidor-automatico/: .gitignore  resumidor.html  style.css
resumidor-automatico/js/: resumidor.js
rust-password-generator/: index.html  package-lock.json  package.json  readme.md
rust-password-generator/src/: main.ts  styles.css
rust-password-generator/src-tauri/: Cargo.toml  tauri.conf.json
rust_file_organizer/: .gitignore  Cargo.toml  config.yaml  readme.md
rust_file_organizer/src/: main.rs
todoapp/: package.json  tailwind.config.js  vite.config.js
todoapp-kanban/: .firebaserc  firestore.rules  index.html  package-lock.json  readme.md
todoapp-kanban/src/: main.jsx
todoapp/src/: App.jsx  index.css
(+9 files in other folders)
